<resources>
    <string name="app_name">Navigator</string>
    <string name="common_title">Навигатор ЮРГПУ</string>

    <!-- Shared preferences -->
    <string name="preference_file_key">preference_file_key</string>
    <string name="preference_user_login">user_login</string>
    <string name="preference_user_role">user_role</string>


    <!-- BrowserActivity -->
    <string name="activity_browser_login_title">Вход</string>
    <string name="activity_browser_registration_title">Регистрация</string>
    <string name="activity_browser_npi_title">Сайт ЮРГПУ(НПИ)</string>
    <string name="activity_browser_run_ban">Переход запрещен</string>

    <!-- fragment_login -->
    <string name="fragment_login_hello_text_textview">
        Добро пожаловать в навигационную систему ЮРГПУ(НПИ)
    </string>
    <string name="fragment_login_login_textview">Логин</string>
    <string name="fragment_login_password_textview">Пароль</string>
    <string name="fragment_login_login_button">Войти</string>
    <string name="fragment_login_or_textview">или</string>
    <string name="fragment_login_register_button">Зарегистрироваться</string>


    <!-- fragment_registration -->
    <string name="fragment_registration_name_text">Имя</string>
    <string name="fragment_registration_fam_text">Фамилия</string>
    <string name="fragment_registration_otch_text">Отчество</string>
    <string name="fragment_registration_age_text">Возраст</string>
    <string name="fragment_registration_tel_text">Номер Телефона</string>
    <string name="fragment_registration_sex_text">Пол</string>
    <string name="fragment_registration_registration_button">Зарегистрироваться</string>

    <string-array name="sex">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <!-- CameraActivity -->
    <string name="activity_camera_degree">Градус</string>
    <string name="activity_camera_steps">Шаги</string>

    <!-- TestStartActivity -->
    <string name="activity_test_start_hello">
        Этот экран для разработчиков. Если вы его видите, значит у нас что-то пошло не так.
    </string>

    <!-- RouteActivity -->
    <string name="activity_route_title">Навигатор</string>
    <string name="activity_route_where_are_you">Где вы находитесь:</string>
    <string name="activity_route_destination">Место назначения:</string>
    <string name="activity_route_find_route">Построить маршрут</string>
    <string name="activity_route_scan">Сканировать QR-код</string>
    <string name="activity_route_location">Неизвестно</string>
    <string name="activity_route_need_permission">
        Для сканирования QR-кода необходимо разрешить использование камеры
    </string>
    <string name="activity_route_choose_loc_and_dest_point">Выберите точку отправления и назначения</string>
    <string name="activity_route_json_fail">Данной точки не существует</string>
    <string name="activity_route_location_ok">Ваше положение определено! Сдвинтье панель вниз для просмотра карты</string>

    <string name="activity_route_select_object">Выберите объект</string>
    <string name="activity_route_select_building">Выберите корпус</string>
    <string name="activity_route_select_point">Выберите аудиторию</string>

    <string name="activity_route_hint_qr_text">Чтобы определить свое местоположение отсканируйте QR-код</string>
    <string name="activity_route_hint">Подсказка:</string>
    <string name="activity_route_hint_follow_to">Следуйте на %s и отсканируйте близжайший QR-код</string>
    <string name="activity_route_hint_follow_to_exit">Следуйте к выходу</string>

    <string name="activity_route_read_error">Ошибка чтения карты. Попробуйте очистить кэш.</string>
    <string name="activity_route_error_routing">Не могу построить данный маршрут.</string>

    <!-- HomeActivity -->
    <string name="activity_home_alert_message">Вы действительно хотите выйти из аккаунта \"%s\"?</string>
    <string name="activity_home_alert_title">Внимание!</string>
    <string name="activity_home_alert_negative">Отмена</string>
    <string name="activity_home_alert_positive">Принять</string>
    <string name="activity_home_login_message">Для использования приложения
        необходимо войти или зарегистрироваться. Нажмите, чтобы продолжить.</string>
    <string name="activity_home_login_error_message">Ошибка входа. Нажмите, чтобы попробовать еще раз.</string>
    <string name="activity_home_loading_message">Вход, подождите...</string>
    <string name="activity_home_need_permissin">Для работы приложения необходимо разрешить работать
    с памятью устройства.</string>


    <!-- fragments home  -->
    <string name="activity_home_navigate">Найти путь</string> <!-- это общее -->
    <string name="activity_home_news">Новости</string>
    <string name="activity_home_progress">Успеваемость</string>
    <string name="activity_home_schedule">Расписание</string>
    <string name="activity_home_abit">Абитуриенту</string>


    <!-- Route Menu -->
    <string name="menu_route_logout">Выйти из аккаунта</string>
    <string name="menu_route_login">Войти</string>
    <string name="menu_route_clear_cache">Очистить кэш</string>


    <!-- Browser menu -->
    <string name="menu_browser_close">Закрыть браузер</string>

    <!-- Alerts -->
    <string name="alert_title">Внимание!</string>
    <string name="alert_positive">ОК</string>
    <string name="alert_negative">Отмена</string>

    <string name="alert_dl_map">Данную карту необходимо загрузить. Продолжить?</string>

    <string name="alert_loading">Загрузка...</string>

    <string name="alert_network_disable">Похоже, сеть недоступна! Пожалуйста, проверьте подключение.</string>
    <string name="alert_network_title">Ошибка загрузки</string>
    <string name="alert_network_cancel">Завершить</string>
    <string name="title_activity_new_route">NewRouteActivity</string>


</resources>
