<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_login_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_margin="6dp">

    <TextView
        android:text="@string/fragment_login_hello_text_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10pt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="8dp"
        android:gravity="center">

        <TextView
            android:text="@string/fragment_login_login_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/fragment_login_login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"/>


        <TextView
            android:text="@string/fragment_login_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/fragment_login_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPassword|text"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/fragment_login_login_button"
            android:text="@string/fragment_login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AccentButton"/>

        <TextView
            android:text="@string/fragment_login_or_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragment_login_registration_button"
            android:text="@string/fragment_login_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>