<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_registration_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_registration_name_text" />

        <EditText
            android:id="@+id/fragment_registration_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_registration_fam_text" />

        <EditText
            android:id="@+id/fragment_registration_fam_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_registration_otch_text" />

        <EditText
            android:id="@+id/fragment_registration_otch_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_registration_age_text" />

        <EditText
            android:id="@+id/fragment_registration_age_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_registration_tel_text" />

        <EditText
            android:id="@+id/fragment_registration_tel_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone|text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_registration_sex_text" />

        <Spinner
            android:id="@+id/fragment_registration_sex_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:entries="@array/sex"/>

    </LinearLayout>

    <Button
        android:id="@+id/fragment_registration_registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_registration_registration_button"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:theme="@style/AccentButton"/>

</LinearLayout>