<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_home_root_layout">

    <LinearLayout
        android:id="@+id/activity_home_login_problem_lay"
        android:visibility="gone"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="48dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_problem"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/activity_home_login_error_message"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/activity_home_login_ask_lay"
        android:visibility="gone"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_need_login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/activity_home_login_message"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_home_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/activity_home_loading_message"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_home_need_permission"
        android:visibility="gone"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_problem"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/activity_home_need_permissin"/>

    </LinearLayout>

</FrameLayout>
