<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geo.navigator.route.ui.RouteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:paddingTop="6dp">

            <ImageView
                android:id="@+id/activity_route_image_background"
                tools:src="@drawable/ic_map_route_default_background"
                android:background="@color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"/>

            <ImageView
                android:id="@+id/activity_route_image_drawing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"/>

        </FrameLayout>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_route_where_are_you"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/activity_route_location"/>

                </LinearLayout>

                <Button
                    android:id="@+id/activity_route_button_qr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AccentButton"
                    android:text="@string/activity_route_scan"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_route_destination"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/housing"
                    android:layout_marginTop="8dp">
                </Spinner>

                <Spinner
                    android:id="@+id/activity_route_room_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/room"
                    android:layout_marginTop="16dp">
                </Spinner>
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/activity_route_findway_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AccentButton"
            android:text="@string/activity_route_find_route"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"/>
    </LinearLayout>

</ScrollView>
